# Jalink

./: .env.example  .rustfmt.toml  Cargo.toml  README.md  mongo-init.js  schema.sql
migrations/2021-01-27-121512_create_conversations/: down.sql  up.sql
migrations/2021-01-27-123616_create_participants/: down.sql  up.sql
migrations/2021-01-27-123726_create_messages/: down.sql  up.sql
migrations/2021-01-27-124850_create_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/api/: auth.rs  conversation.rs  index.rs  message.rs  mod.rs  private_ecdsa_key.pem
src/models/: conversation.rs  database.rs  message.rs  mod.rs  participant.rs  user.rs
src/validation/: conversation.rs  database.rs  mod.rs  public_ecdsa_key.pem  user.rs
