[package]
name = "jalink"
version = "1.0.0"
authors = ["LJason <ljason@ljason.cn>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/LJason77/Jalink"
keywords = ["IM"]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
bson = "1.2"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
hyper = { version = "0.14", features = ["client"] }
hyper-tls = "0.5"
jsonwebtoken = "7.2"
serde_json = "1.0"

[dependencies.mongodb]
version = "1.2"
default-features = false
features = ["async-std-runtime"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-dev"
features = ["secrets"]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-dev"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]